--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "vue-loader": "^8.0.0",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.0"
+    "webpack-dev-server": "^1.12.0",
+    "interact.js": "*"
   },
   "dependencies": {
     "es6-promise": "*",
-    "vue": "*",
-    "dragula": "*"
+    "vue": "*"
   }
 }
