--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "webpack-dev-server": "^1.12.0",
     "interact.js": "*",
     "underscore": "*",
-    "sweetalert": "*"
+    "sweetalert": "*",
+    "medium-editor": "*"
   },
   "dependencies": {
     "es6-promise": "*",
