--- a/package.json
+++ b/package.json
@@ -26,22 +26,24 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-runtime": "^5.8.0",
     "cross-env": "^1.0.5",
-    "script-loader": "*",
     "css-loader": "*",
-    "less-loader": "*",
-    "json-loader": "*",
+    "interact.js": "*",
     "invariant": "*",
+    "json-loader": "*",
+    "less-loader": "*",
+    "medium-editor": "*",
+    "nouislider": "leongersen/noUiSlider",
+    "rangy": "^1.3.0",
+    "script-loader": "*",
+    "sweetalert": "*",
+    "underscore": "*",
     "url-loader": "*",
     "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
     "vue-loader": "^8.0.0",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.0",
-    "interact.js": "*",
-    "underscore": "*",
-    "sweetalert": "*",
-    "medium-editor": "*"
+    "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
     "es6-promise": "*",
