--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "babel-runtime": "^5.8.0",
     "cross-env": "^1.0.5",
     "css-loader": "*",
+    "dot-object": "^1.4.1",
+    "dragula": "^3.6.8",
     "interact.js": "*",
     "invariant": "*",
     "json-loader": "*",
