--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "css-loader": "*",
     "dot-object": "^1.4.1",
     "dragula": "^3.6.8",
+    "image-webpack-loader": "^1.7.0",
+    "inline-loader": "^0.1.0",
     "interact.js": "*",
     "invariant": "*",
     "json-loader": "*",
@@ -37,6 +39,7 @@
     "nouislider": "leongersen/noUiSlider",
     "rangy": "^1.3.0",
     "script-loader": "*",
+    "svg-sprite-loader": "0.0.18",
     "sweetalert": "*",
     "underscore": "*",
     "url-loader": "*",
