--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-runtime": "^5.8.0",
     "cross-env": "^1.0.5",
     "css-loader": "*",
+    "deep-diff": "^0.3.4",
     "dot-object": "^1.4.1",
     "dragula": "^3.6.8",
     "image-webpack-loader": "^1.7.0",
