--- a/package.json
+++ b/package.json
@@ -59,9 +59,10 @@
     "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
+    "ace-builds": "^1.2.2",
     "es6-promise": "*",
+    "lodash.throttle": "^4.0.0",
     "tinycolor2": "*",
-    "vue": "*",
-    "lodash.throttle": "^4.0.0"
+    "vue": "*"
   }
 }
