--- a/components.json
+++ b/components.json
@@ -2,7 +2,7 @@
     "items": [
         {
             "label": "1 Column",
-            "url": "https://rawgit.com/djavaweb/unobuilder/new/components/column-1/component.json"
+            "url": "https://rawgit.com/djavaweb/unobuilder/new/components/column-1/component.js"
         }
     ]
 }
