--- a/package.json
+++ b/package.json
@@ -25,26 +25,20 @@
     "babel-plugin-transform-es2015-computed-properties": "*",
     "babel-plugin-transform-runtime": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
-    "babel-runtime": "^5.8.0",
+    "babel-runtime": "^6.11.6",
     "cross-env": "^1.0.5",
     "css-loader": "*",
-    "deep-diff": "^0.3.4",
     "dot-object": "^1.4.1",
-    "dragula": "^3.6.8",
     "expose-loader": "^0.7.1",
     "image-webpack-loader": "^1.7.0",
     "inline-loader": "^0.1.0",
-    "interact.js": "*",
     "invariant": "*",
     "jquery": "^3.0.0",
     "json-loader": "*",
-    "less-loader": "*",
-    "medium-editor": "^5.21.0",
-    "rangy": "^1.3.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "script-loader": "*",
-    "select2": "^4.0.3",
     "svg-sprite-loader": "0.0.18",
-    "sweetalert": "*",
     "systemjs": "^0.19.31",
     "underscore": "*",
     "url-loader": "*",
@@ -59,9 +53,7 @@
     "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
-    "ace-builds": "^1.2.2",
     "es6-promise": "*",
-    "lodash.throttle": "^4.0.0",
     "tinycolor2": "*",
     "vue": "*"
   }
