--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async": "^2.0.1",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-lodash": "^3.2.9",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-runtime": "^6.11.6",
@@ -47,6 +48,7 @@
   "dependencies": {
     "vue": "^1.0.26",
     "vue-multiselect": "^1.1.2",
-    "vue-sketch-color-picker": "0.0.2"
+    "vue-sketch-color-picker": "0.0.2",
+    "lodash": "^4.16.4"
   }
 }
