--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "image-webpack-loader": "^2.0.0",
     "inline-loader": "^0.1.1",
+    "jade": "^1.11.0",
+    "jade-loader": "^0.8.0",
     "json-loader": "^0.5.4",
     "node-sass": "^3.10.0",
     "pug": "^2.0.0-beta6",
