--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "brace": "^0.9.1",
     "jquery": "^3.1.1",
     "uikit": "^3.0.0-beta.5",
     "vue": "^2.1.0",
