--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Files
+**/.DS_Store
+dist
+
 # Logs
 logs
 *.log
@@ -26,5 +30,3 @@ build/Release
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
-**/.DS_Store
-dist
