--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "babel-core": "^6.0.0",
     "babel-eslint": "^7.0.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
-    "babel-loader": "^6.0.0",
+    "babel-loader": "^6.3.2",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-plugin-transform-vue-jsx": "^3.3.0",
@@ -34,20 +34,20 @@
     "babel-register": "^6.0.0",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
-    "css-loader": "^0.25.0",
+    "css-loader": "^0.26.2",
     "eslint": "^3.7.1",
     "eslint-config-standard": "^6.1.0",
-    "eslint-friendly-formatter": "^2.0.5",
-    "eslint-loader": "^1.5.0",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-loader": "^1.6.3",
     "eslint-plugin-html": "^1.3.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
     "expose-loader": "^0.7.1",
     "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.9.0",
-    "friendly-errors-webpack-plugin": "^1.1.2",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
@@ -58,25 +58,28 @@
     "ncp": "^2.0.0",
     "node-sass": "^4.3.0",
     "opn": "^4.0.2",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^0.3.0",
+    "postcss-loader": "^1.3.2",
     "pug": "^2.0.0-beta7",
     "pug-lexer": "^2.3.0",
     "pug-loader": "^2.3.0",
     "pug-parser": "^2.0.1",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^4.1.1",
+    "sass-loader": "^6.0.2",
     "script-loader": "^0.7.0",
+    "selenium-server": "^3.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "vue-loader": "^10.0.0",
+    "style-loader": "^0.13.2",
+    "url-loader": "^0.5.8",
+    "vue-loader": "^11.1.3",
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.1.0",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^0.14.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.16.1",
+    "webpack-merge": "^2.6.1"
   },
   "engines": {
     "node": ">= 4.0.0",
