--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ node_js:
   - "6"
 cache:
   yarn: true
-before_install:
-  - export CHROME_BIN=chromium-browser
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+before_script:
+    - 'export CHROME_BIN=chromium-browser'
+    - 'export DISPLAY=:99.0'
+    - 'sh -e /etc/init.d/xvfb start'
+    - 'npm install'
