--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
     "babel-loader": "^6.3.2",
     "babel-plugin-istanbul": "^4.0.0",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
+    "babel-plugin-transform-async-to-module-method": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.3.0",
     "babel-polyfill": "^6.23.0",
