--- a/package.json
+++ b/package.json
@@ -17,39 +17,39 @@
   },
   "dependencies": {
     "brace": "^0.10.0",
-    "jquery": "^3.1.1",
-    "uikit": "^3.0.0-beta.16",
-    "vue": "^2.2.1",
-    "vue-multiselect": "^2.0.0-beta.13",
+    "jquery": "^3.2.0",
+    "uikit": "^3.0.0-beta.18",
+    "vue": "^2.2.4",
+    "vue-multiselect": "^1.1.4",
     "vuex": "^2.2.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
-    "babel-core": "^6.22.1",
+    "autoprefixer": "^6.7.7",
+    "babel-core": "^6.24.0",
     "babel-eslint": "^7.1.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
-    "babel-loader": "^6.3.2",
+    "babel-loader": "^6.4.1",
     "babel-plugin-istanbul": "^4.0.0",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-async-to-module-method": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.3.0",
+    "babel-plugin-transform-vue-jsx": "^3.4.2",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-latest": "^6.22.0",
+    "babel-preset-latest": "^6.24.0",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
+    "babel-register": "^6.24.0",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
-    "chromedriver": "^2.27.3",
+    "chromedriver": "^2.28.0",
     "connect-history-api-fallback": "^1.1.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.1.4",
+    "cross-env": "^3.2.4",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.26.2",
-    "eslint": "^3.14.1",
-    "eslint-config-standard": "^7.0.0",
+    "css-loader": "^0.27.3",
+    "eslint": "^3.18.0",
+    "eslint-config-standard": "^7.1.0",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-loader": "^1.6.3",
     "eslint-plugin-html": "^2.0.1",
@@ -57,8 +57,8 @@
     "eslint-plugin-standard": "^2.1.1",
     "eventsource-polyfill": "^0.9.6",
     "expose-loader": "^0.7.3",
-    "express": "^4.15.0",
-    "extract-text-webpack-plugin": "^2.0.0",
+    "express": "^4.15.2",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "function-bind": "^1.0.2",
@@ -70,19 +70,19 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-sinon-chai": "^1.2.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.30",
-    "karma-webpack": "^2.0.2",
+    "karma-webpack": "^2.0.3",
     "less": "^2.7.2",
-    "less-loader": "^2.2.3",
+    "less-loader": "^3.0.0",
     "lolex": "^1.5.2",
     "mkdirp": "^0.5.1",
     "mocha": "^3.2.0",
     "ncp": "^2.0.0",
-    "nightwatch": "^0.9.12",
-    "node-sass": "4.2.0",
+    "nightwatch": "^0.9.13",
+    "node-sass": "^4.5.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
@@ -94,23 +94,23 @@
     "pug-parser": "^2.0.2",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.2",
+    "sass-loader": "^6.0.3",
     "script-loader": "^0.7.0",
-    "selenium-server": "^3.1.0",
+    "selenium-server": "^3.3.1",
     "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "sinon": "^1.17.7",
+    "shelljs": "^0.7.7",
+    "sinon": "^2.0.0",
     "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.2",
+    "style-loader": "^0.14.1",
     "url-loader": "^0.5.8",
-    "vue-loader": "^11.1.3",
-    "vue-style-loader": "^2.0.3",
-    "vue-template-compiler": "^2.1.0",
+    "vue-loader": "^11.1.4",
+    "vue-style-loader": "^2.0.4",
+    "vue-template-compiler": "^2.2.4",
     "webpack": "^2.2.1",
-    "webpack-bundle-analyzer": "^2.3.0",
+    "webpack-bundle-analyzer": "^2.3.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^3.0.0"
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 4.0.0",
