--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-async-to-module-method": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.4.2",
     "babel-polyfill": "^6.23.0",
