--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,6 @@ before_install:
    - sudo dpkg -i google-chrome*.deb
    - sudo apt-get -f install
 before_script:
+  - 'npm install less --global'
   - 'npm install'
+  - 'npm run build:uikit'
