--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "dependencies": {
     "brace": "^0.10.0",
     "jquery": "^3.2.0",
+    "lodash": "^4.17.4",
     "lodash.debounce": "^4.0.8",
     "uikit": "^3.0.0-beta.18",
-    "unobuilder-parser": "0.0.1-alpha.16",
+    "unobuilder-parser": "0.0.1-alpha.17",
     "vue": "^2.2.4",
     "vue-multiselect": "^1.1.4",
     "vue-sketch-color-picker": "^1.0.1",
