Use eslint config vue

--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "css-loader": "^0.27.3",
     "eslint": "^3.18.0",
     "eslint-config-standard": "^7.1.0",
+    "eslint-config-vue": "^2.0.2",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-loader": "^1.6.3",
     "eslint-plugin-html": "^2.0.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.1.1",
+    "eslint-plugin-vue": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
     "expose-loader": "^0.7.3",
     "express": "^4.15.2",
