--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "lodash.debounce": "^4.0.8",
     "uikit": "^3.0.0-beta.18",
     "unobuilder-component-parser": "^1.3.0",
-    "unobuilder-parser": "0.0.1-alpha.18",
+    "unobuilder-parser": "0.0.1-alpha.19",
     "vue": "^2.2.4",
     "vue-multiselect": "^1.1.4",
     "vue-sketch-color-picker": "^1.0.1",
     "vuex": "^2.2.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
+    "autoprefixer": "^7.0.1",
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.1.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.0.0",
     "babel-plugin-istanbul": "^4.0.0",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -48,45 +48,47 @@
     "chromedriver": "^2.28.0",
     "connect-history-api-fallback": "^1.1.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.2.4",
+    "cross-env": "^4.0.0",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.27.3",
+    "css-loader": "^0.28.1",
     "eslint": "^3.18.0",
-    "eslint-config-standard": "^7.1.0",
+    "eslint-config-standard": "^10.2.1",
     "eslint-config-vue": "^2.0.2",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-loader": "^1.6.3",
-    "eslint-plugin-html": "^2.0.1",
+    "eslint-plugin-html": "^2.0.3",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.1.1",
+    "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
     "expose-loader": "^0.7.3",
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.10.1",
+    "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "karma": "^1.4.1",
-    "karma-chrome-launcher": "^2.0.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sinon-chai": "^1.2.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "^0.0.30",
+    "karma-spec-reporter": "^0.0.31",
     "karma-webpack": "^2.0.3",
     "mkdirp": "^0.5.1",
     "mocha": "^3.2.0",
     "ncp": "^2.0.0",
     "nightwatch": "^0.9.13",
     "node-sass": "^4.5.0",
-    "opn": "^4.0.2",
+    "opn": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
-    "postcss-loader": "^1.3.2",
+    "postcss-loader": "^2.0.2",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.3",
@@ -95,13 +97,13 @@
     "semver": "^5.3.0",
     "sinon": "^2.0.0",
     "sinon-chai": "^2.8.0",
-    "style-loader": "^0.14.1",
+    "style-loader": "^0.17.0",
     "url-loader": "^0.5.8",
-    "vue-loader": "^11.1.4",
-    "vue-style-loader": "^2.0.4",
+    "vue-loader": "^12.0.3",
+    "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.2.4",
-    "webpack": "^2.2.1",
-    "webpack-bundle-analyzer": "^2.3.1",
+    "webpack": "^2.5.1",
+    "webpack-bundle-analyzer": "^2.6.0",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
     "webpack-merge": "^4.1.0"
