--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "uikit": "^3.0.0-beta.18",
     "unobuilder-component-parser": "^1.3.0",
     "unobuilder-parser": "0.0.1-alpha.19",
-    "vue": "^2.2.4",
+    "vue": "^2.3.3",
     "vue-multiselect": "^1.1.4",
-    "vue-sketch-color-picker": "^1.0.1",
+    "vue-sketch-color-picker": "^1.1.0",
     "vuex": "^2.2.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.0.1",
+    "autoprefixer": "^7.1.0",
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.1.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
@@ -48,13 +48,13 @@
     "chromedriver": "^2.28.0",
     "connect-history-api-fallback": "^1.1.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^4.0.0",
+    "cross-env": "^5.0.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.1",
     "eslint": "^3.18.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-config-vue": "^2.0.2",
-    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.6.3",
     "eslint-plugin-html": "^2.0.3",
     "eslint-plugin-import": "^2.2.0",
@@ -81,31 +81,31 @@
     "karma-spec-reporter": "^0.0.31",
     "karma-webpack": "^2.0.3",
     "mkdirp": "^0.5.1",
-    "mocha": "^3.2.0",
+    "mocha": "^3.4.1",
     "ncp": "^2.0.0",
     "nightwatch": "^0.9.13",
-    "node-sass": "^4.5.0",
+    "node-sass": "^4.5.3",
     "opn": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
-    "postcss-loader": "^2.0.2",
+    "postcss-loader": "^2.0.5",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.3",
+    "sass-loader": "^6.0.5",
     "script-loader": "^0.7.0",
     "selenium-server": "^3.3.1",
     "semver": "^5.3.0",
     "sinon": "^2.0.0",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.17.0",
-    "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony",
+    "uglify-js": "^3.0.7",
     "uglifyjs-webpack-plugin": "^0.4.3",
     "url-loader": "^0.5.8",
-    "vue-loader": "^12.0.3",
+    "vue-loader": "^12.0.4",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.2.4",
+    "vue-template-compiler": "^2.3.3",
     "webpack": "^2.5.1",
-    "webpack-bundle-analyzer": "^2.6.0",
+    "webpack-bundle-analyzer": "^2.8.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
     "webpack-merge": "^4.1.0",
