--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "jquery": "^3.2.0",
     "lodash": "^4.17.4",
     "lodash.debounce": "^4.0.8",
-    "uikit": "^3.0.0-beta.18",
+    "uikit": "^3.0.0-beta.23",
     "unobuilder-component-parser": "^1.3.0",
     "unobuilder-parser": "0.0.1-alpha.19",
+    "unobuilder-style-to-object": "^1.2.0",
     "vue": "^2.3.3",
     "vue-multiselect": "^1.1.4",
-    "vue-sketch-color-picker": "^1.1.0",
+    "vue-sketch-color-picker": "^1.1.2",
     "vuex": "^2.2.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.0",
+    "autoprefixer": "^7.1.1",
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.1.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
@@ -64,7 +65,7 @@
     "eslint-plugin-vue": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
     "expose-loader": "^0.7.3",
-    "express": "^4.15.2",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -98,14 +99,14 @@
     "sinon": "^2.0.0",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.17.0",
-    "uglify-js": "^3.0.7",
+    "uglify-js": "^3.0.8",
     "uglifyjs-webpack-plugin": "^0.4.3",
     "url-loader": "^0.5.8",
-    "vue-loader": "^12.0.4",
+    "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
     "webpack": "^2.5.1",
-    "webpack-bundle-analyzer": "^2.8.1",
+    "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
     "webpack-merge": "^4.1.0",
